# fossil-mcp

./: .claude.md  .env.example  .gitignore  CLAUDE.md  Cargo.toml  TLA_SPECIFICATION.md  TLC_VERIFICATION_REPORT.md  WIKISIMPLE_IMPROVEMENTS.md  WikiSync.cfg  WikiSync.tla  flake.nix  fossil_mcp.cfg  fossil_mcp.tla
.beads/: issues.jsonl
.omc/: project-memory.json
.omc/state/: agent-replay-c8719502-103c-4aa5-a9af-608cdc643e88.jsonl  subagent-tracking.json
CheatSheet/: CheatSheet.cfg  CheatSheet.tla
CheatSheet/Refinement/: CheatSheet.tla  RefinedCheatSheet.cfg  RefinedCheatSheet.tla
book/: README.md  book.toml
book/src/: SUMMARY.md  introduction.md
book/src/api/: errors.md  list-wiki-pages.md  read-wiki-page.md  request-types.md  response-types.md  sync-types.md  tools.md  types.md  write-wiki-page.md
book/src/appendices/: tla-specification.md
book/src/developer-guide/: building-nix.md  building-standard.md  building.md  contributing.md  fossil-integration.md  integration-tests.md  mcp-protocol.md  unit-tests.md
book/src/user-guide/: configuration.md  getting-started.md  installation.md  listing-pages.md  mcp-integration.md  quick-start.md  reading-pages.md  repository-setup.md  synchronization.md  troubleshooting.md  usage.md  writing-pages.md
src/: WikiSimple.cfg  WikiSimple.tla  WikiSimple_Fair.cfg  WikiSimple_README.md  handlers.rs  lib.rs  main.rs  server.rs  state.rs  types.rs
src/server/: WikiSync.cfg  WikiSync.tla  sync.rs  types.rs
tests/: fossil_wiki_integration.rs  integration_tests.rs
