[package]
name = "fossil-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp-server = "0.1.0"
mcp-spec = "0.1.0"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1.4"
