[package]
name = "fossil-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.12.0", features = ["server"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
schemars = "1.2"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
